Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <h2>
 <a name="github-pages" class="anchor" href="#github-pages"><span class="octicon octicon-link"></span></a>GitHub Pages</h2>
 
-<p>For the past few years, I've been mostly using mercurial for DVC, but I'm beginning to get my feet wet with git as well.</p>
+<p>For the past few years, I've been using mercurial for DVC, but I'm beginning to get my feet wet with git in order to take advantage of some of github's attractive features.</p>
+
+<p>Most of my active coding is in groovy, and remains for now in <a href="https://bitbucket.org/neelsmith/">my 80+ repositories on bitbucket</a>, but the I've begun hosting the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> here on github.  (I'm listing <a href="http://neelsmith.github.io/hcmid-edd/">HCMID projects here</a>.)</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
