Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p>Most of my active coding is in groovy, and remains for now in <a href="https://bitbucket.org/neelsmith/">my 80+ repositories on bitbucket</a>, but I've begun hosting the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> (HCMID) here on github.  </p>
 
 <ul>
-<li>Here are <a href="http://neelsmith.github.io/hcmid-edd/">HCMID projects on github</a>.)</li>
+<li>Here are <a href="http://neelsmith.github.io/hcmid-edd/">HCMID projects on github</a>.</li>
 <li>Here I am <a href="http://shot.holycross.edu/%7Ensmith">at Holy Cross</a>.</li>
 </ul>
       </section>
