Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         <h2>
 <a name="github-pages" class="anchor" href="#github-pages"><span class="octicon octicon-link"></span></a>GitHub Pages</h2>
 
-<p>For the past few years, I've been using mercurial for DVC, but I'm beginning to get my feet wet with git in order to take advantage of some of github's attractive features.</p>
+<p>For the past few years, I've been using mercurial for DVC, but I've
+begun migrating to git in order to take advantage of some of github's attractive features.</p>
 
-<p>Most of my active coding is in groovy, and remains for now in <a href="https://bitbucket.org/neelsmith/">my 80+ repositories on bitbucket</a>, but I've begun hosting the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> (HCMID) here on github.  </p>
+<p>Most of my active coding is in groovy, and much of it remains for now in 
+<a href="https://bitbucket.org/neelsmith/">my 80+ repositories on bitbucket</a>, but some projects are already here on github.
+All of the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> (HCMID) are currently using github for their archival repositories.  </p>
 
 <ul>
 <li>Here are <a href="http://neelsmith.github.io/hcmid-edd/">HCMID projects on github</a>.</li>
