Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
       </header>
       <section>
         <h2>
-<a name="github-pages" class="anchor" href="#github-pages"><span class="octicon octicon-link"></span></a>GitHub Pages</h2>
+<a name="developing-citable-archives-of-scholarly-material" class="anchor" href="#developing-citable-archives-of-scholarly-material"><span class="octicon octicon-link"></span></a>Developing Citable Archives of Scholarly Material</h2>
 
-<p>For the past few years, I've been using mercurial for DVC, but I've
-begun migrating to git in order to take advantage of some of github's attractive features.</p>
+<ul>
+<li>
+<a href="http://shot.holycross.edu/%7Ensmith/gits.html">Overview of my repositories</a>:  the CITE Architecture, and the Homer Multitext project</li>
+<li>Here I am <a href="http://shot.holycross.edu/%7Ensmith">at Holy Cross</a>.</li>
+</ul><h2>
+<a name="the-holy-cross-mid-club" class="anchor" href="#the-holy-cross-mid-club"><span class="octicon octicon-link"></span></a>The Holy Cross MID Club</h2>
 
-<p>Most of my active coding is in groovy, and much of it remains for now in 
-<a href="https://bitbucket.org/neelsmith/">my 80+ repositories on bitbucket</a>, but some projects are already here on github.
-All of the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> (HCMID) are currently using github for their archival repositories.  </p>
+<p>All the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> (HCMID) are currently using github for their archival repositories.  </p>
 
 <ul>
 <li>Here are <a href="http://neelsmith.github.io/hcmid-edd/">HCMID projects on github</a>.</li>
-<li>Here I am <a href="http://shot.holycross.edu/%7Ensmith">at Holy Cross</a>.</li>
 </ul>
       </section>
       <footer>
