Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
 <a name="developing-citable-archives-of-scholarly-material" class="anchor" href="#developing-citable-archives-of-scholarly-material"><span class="octicon octicon-link"></span></a>Developing Citable Archives of Scholarly Material</h2>
 
 <ul>
-<li>
-<a href="http://shot.holycross.edu/%7Ensmith/gits.html">Overview of my repositories</a>:  the CITE Architecture, and the Homer Multitext project</li>
+<li>With Chris Blackwell, I work on the CITE architecture (<a href="http://cite-architecture.github.io/">here on github</a>)</li>
+<li>Archives I'm helping develop:
+
+<ul>
+<li>the <a href="http://homermultitext.github.io/">HomerMultitext project's</a> github repositories</li>
+<li>repositories of the <a href="http://phoros.github.io">Phoros project</a> (sources for the study of Athenian tribute)</li>
+</ul>
+</li>
 <li>Here I am <a href="http://shot.holycross.edu/%7Ensmith">at Holy Cross</a>.</li>
 </ul><h2>
 <a name="the-holy-cross-mid-club" class="anchor" href="#the-holy-cross-mid-club"><span class="octicon octicon-link"></span></a>The Holy Cross MID Club</h2>
@@ -36,7 +42,7 @@
 <p>All the scholarly editing projects I collaborate on with members of the <a href="http://shot.holycross.edu/hcmid/">Holy Cross Manuscripts, Inscriptions and Documents Club</a> (HCMID) are currently using github for their archival repositories.  </p>
 
 <ul>
-<li>Here are <a href="http://neelsmith.github.io/hcmid-edd/">HCMID projects on github</a>.</li>
+<li>Here are <a href="http://hcmid.github.io/">Holy Cross MID's</a> github repositories</li>
 </ul>
       </section>
       <footer>
